2019-06-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add support for bases > 36, negative bases, and non-integer bases, in base() function
	* Remove replacements (not updated properly) for obsolete currencies
	* Fix parsing of "0x80 mod 3" and similar

2019-06-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* dBm and dBW units

2019-05-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix abs(x)=a for complex x

2019-05-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* CODATA 2018 update for physical constants

2019-05-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved operator support for RPN syntax
	* Fix "percent" interpreted as "/ cent"
	* xor() => lxor(), bitxor() => xor()

2019-05-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault in findMatchingUnit()
	* Fix crash with empty factorial
	* Fix crashes with vectors containing empty vector ([[]]) and matrices with only one row and column

2019-05-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show binary, octal, decimal, and hexadecimal result when using qalc in programming mode
	* Do not save bases and caret as xor when using qalc in programming mode

2019-05-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* For vector + scalar, add scalar to all components
	* Round bitwise right shift downwards by default (arithmetic two's complement shift)
	* Treat all non-zero values as boolean true (was positive true, non-positive false)
	* bitrot() function for bit rotation
	* Add signedness argument to bitcmp()
	* Handle decimal shift operator steps with base < 10;

2019-05-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Combine consecutive Unicode powers in one power

2019-05-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for Unicode fractions
	* Support base prefixes with input bases other than decimal

2019-05-02 Hanna Knutsson <hanna.knutsson@protonmail.com>
