@@ -1,3 +1,9 @@
+2019-06-29 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* General support for bases > 36, negative bases, and non-integer bases
+	* Reduce length of expressions in messages (primarily when using high precision)
+	* Fix max decimals for small intervals with +/- display enabled
+
 2019-06-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Add support for bases > 36, negative bases, and non-integer bases, in base() function
